--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
-
 <html>
-
-    <head>
-
-<link rel="stylesheet" href="/CSS file.css"
-
-    </head>
-
+<head>
+	<meta charset="UTF-8">
+	<title>Plaing</title>
+	<link rel="stylesheet" href="./src/style.css">
+</head>
 <body>
+	<p>
+		Input:
+		<br>
+		<input type="submit" value="Из ... в десятичную" onclick="in10();">
+		<input type="submit" value="Из десятичной в ..." onclick="from10();">
+	</p>
+	<hr />
 
-    <form>
-
-    <input type="submit" value="Из ... в десятичную" onclick="in10();">
-
-    </form>
-
-    <form>
-
-    <input type="submit" value="Из десятичной в ..." onclick="from10();">
-
-    </form>
-
+	<script src="./src/main.js"></script>
 </body>
-
-<script src='/Index JS.js'></script>
-
 </html>
